--- a/多项式回归.md
+++ b/多项式回归.md
@@ -20,7 +20,7 @@ plt.plot(X,lin_reg.predict(X),c='blue')
 ```
 # 多项式回归
 from sklearn.preprocessing import PolynomialFeatures
-ploy_reg=PolynomialFeatures(degree=4)
+ploy_reg=PolynomialFeatures(degree=4)  # 维度越大，拟合越好
 X_poly=ploy_reg.fit_transform(X)
 lin_reg1=LinearRegression()
 lin_reg1.fit(X_poly,Y)
