--- a/多元线性回归.md
+++ b/多元线性回归.md
@@ -33,3 +33,5 @@ X_opt=np.array(X_train[:,[0,3]], dtype=float)
 regressor_OLS=sm.OLS(endog=y_train, exog=X_opt).fit()
 regressor_OLS.summary()
 ```
+# R2 和 adj-R2解释
+![image](https://user-images.githubusercontent.com/41554601/175761861-c482f4ef-d9ee-400a-918f-306369450da1.png)
