--- a/数据前处理.md
+++ b/数据前处理.md
@@ -21,8 +21,9 @@ X=np.append(test1,X[:,1:3],axis=1)
 # 分数据集
 from sklearn.model_selection import train_test_split
 X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size=0.2, random_state=0)
+# 标准化
 from sklearn.preprocessing import StandardScaler
 sc_X = StandardScaler()
-X_train1=sc_X.fit_transform(X_train)
+X_train=sc_X.fit_transform(X_train)
 X_test=sc_X.transform(X_test)
 ```
