Update and rename 朴素贝叶斯,md to 朴素贝叶斯.md

--- a/朴素贝叶斯.md
+++ b/朴素贝叶斯.md
@@ -39,3 +39,4 @@ for i, j in enumerate(np.unique(y_set)):
     plt.scatter(X_set[y_set==j,0],X_set[y_set==j,1],
                color=ListedColormap(('orange','blue'))(i),label=i)
 ```
+![image](https://user-images.githubusercontent.com/41554601/175778203-da6f3b87-0288-43e3-b235-fdc454fafde8.png)
