--- a/决策树.md
+++ b/决策树.md
@@ -16,7 +16,7 @@ sc_X = StandardScaler()
 X_train=sc_X.fit_transform(X_train)
 X_test=sc_X.transform(X_test)
 # 决策树
-## 注意：决策树没有用欧式距离，上面的特征缩放可以不用，下面的step=0.01可以根据数值改变过
+## 注意：决策树没有用欧式距离，上面的特征缩放可以不用，下面的step=0.01可以根据数值改变
 from sklearn.tree import DecisionTreeClassifier
 ## criterion参数可选entropy（熵），gini(基尼指数)
 classifier=DecisionTreeClassifier(criterion='entropy',random_state=0)
