--- a/置信区间上限算法.md
+++ b/置信区间上限算法.md
@@ -1,4 +1,5 @@
 # 载入数据
+[Ads_CTR_Optimisation.csv](https://github.com/171909771/DATA-scientist/files/9001080/Ads_CTR_Optimisation.csv)
 
 ```
 import pandas as pd
