--- a/置信区间上限算法.md
+++ b/置信区间上限算法.md
@@ -54,10 +54,44 @@ total=0
 for n in range(10000):
     k=random.randrange(0,10)
     record.append(k)
-    total=total+datasets.iloc[n,k]
+    total=total+dataset.iloc[n,k]
 ### 绘图
 plt.hist(record)
 plt.title(f"hitshot number is {total}")
 plt.show()
 ```
 ![image](https://user-images.githubusercontent.com/41554601/176184088-931663cd-d54d-48cc-80a5-1cb487466163.png)
+
+## 方法三：Thompson抽样算法
+### 每次用概率最高的广告去进行下游实验
+![image](https://user-images.githubusercontent.com/41554601/176210629-ab85f6a2-5b72-4192-9dd6-7b21c5e1668b.png)
+
+```
+import random
+N=10000
+d=10
+property_1=[0]*d
+property_0=[0]*d
+total=0
+ads_select=[]
+for n in range(N):
+    value_max=0
+    ## 计算beta分布
+    for k in range(d):
+        value_beta=random.betavariate(property_1[k]+1,property_0[k]+1)
+        if value_beta>value_max:
+            value_max=value_beta
+            set_value=k
+    ads_select.append(set_value)
+    total+=dataset.iloc[n,set_value]
+    if dataset.iloc[n,set_value]==1:
+        property_1[set_value]+=1
+    else:
+        property_0[set_value]+=1
+plt.hist(ads_select)
+plt.title(f"hitshot number is {total}")
+plt.xlabel('Ads')
+plt.ylabel('Number of times each ad was selected')
+plt.show()
+```
+![image](https://user-images.githubusercontent.com/41554601/176209801-a9435092-2b23-4e24-a645-5a1600cd53e6.png)
