--- a/数据前处理.md
+++ b/数据前处理.md
@@ -18,6 +18,8 @@ X[:,0]=LabelEncoder().fit_transform(X[:,0])
 from sklearn.preprocessing import OneHotEncoder
 test1=OneHotEncoder(dtype=np.int32).fit_transform(X[:,[0]]).toarray()
 X=np.append(test1,X[:,1:3],axis=1)
+##另外一种方法加入列
+np.insert(X,[0],test1,axis=1)
 # 分数据集
 from sklearn.model_selection import train_test_split
 X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size=0.2, random_state=0)
