--- a/人工神经网络.md
+++ b/人工神经网络.md
@@ -1,6 +1,8 @@
 # 载入数据
 [Churn_Modelling.csv](https://github.com/171909771/DATA-scientist/files/9039704/Churn_Modelling.csv)
 
+## 初始化数据
+```
 import pandas as pd
 import numpy as np 
 import matplotlib.pyplot as plt 
@@ -12,6 +14,7 @@ X[:,1]=LabelEncoder().fit_transform(X[:,1])
 X[:,2]=LabelEncoder().fit_transform(X[:,2])
 from sklearn.preprocessing import OneHotEncoder
 test1=OneHotEncoder(dtype=np.int32).fit_transform(X[:,[1]]).toarray()
+
 ## 删除1列
 test1=test1[:,1:]
 ## 删除需要处理的列
@@ -26,8 +29,10 @@ from sklearn.preprocessing import StandardScaler
 sc_X = StandardScaler()
 X_train=sc_X.fit_transform(X_train)
 X_test=sc_X.transform(X_test)
+```
 
-# 人工神经网络
+### 人工神经网络
+```
 import keras
 from keras.models import Sequential
 from keras.layers import Dense
@@ -47,3 +52,4 @@ y_pred=classifier.predict(X_test)
 y_pred=y_pred>0.5
 from sklearn.metrics import confusion_matrix
 cm=confusion_matrix(y_test,y_pred)
+```
