--- a/先验算法.md
+++ b/先验算法.md
@@ -1,7 +1,8 @@
 ### 数据
 [Market_Basket_Optimisation.csv](https://github.com/171909771/DATA-scientist/files/8992685/Market_Basket_Optimisation.csv)
 ### 先验函数apyori
-
+#### surpport 是总人数中看过A电影的人数比例，confidence是看过B电影中又看过A电影的人数比例，lift是下图的公式
+![image](https://user-images.githubusercontent.com/41554601/177165475-42c5d30d-c826-4310-97ee-1b9a2cc0bcb9.png)
 
 ```
 ## 载入数据
