--- a/先验算法.md
+++ b/先验算法.md
@@ -18,6 +18,7 @@ for i in range(0,7501):
     transactions1[i]=[x for x in transactions1[i] if x is not np.nan]
 ## 先验算法
 from apyori import apriori
+### 可以先画一个分布图看看信息分布，再决定support和confidence
 res=apriori(transactions1,min_support=0.003,min_confidence=0.2,min_length=2,min_lift=3)
 myresult=list(res)
 myresult1=[list(x) for x in myresult]
