--- a/人工神经网络.md
+++ b/人工神经网络.md
@@ -38,6 +38,7 @@ from keras.models import Sequential
 from keras.layers import Dense
 ## 构建神经网络框架
 classifier=Sequential()
+### units 数量是输入值与输出值的平均数
 classifier.add(Dense(units=6,activation='relu',kernel_initializer='uniform',input_dim=11))
 classifier.add(Dense(units=6,activation='relu',kernel_initializer='uniform'))
 classifier.add(Dense(units=1,activation='sigmoid',kernel_initializer='uniform'))  ### 如果是多项就用'softmax'
