--- a/分类/决策树.md
+++ b/分类/决策树.md
@@ -1,6 +1,10 @@
 # 载入数据
 [Social_Network_Ads.csv](https://github.com/171909771/DATA-scientist/files/8984596/Social_Network_Ads.csv)
 
+## 决策树参数，调控max_depth就可以了
+![image](https://user-images.githubusercontent.com/41554601/180814474-24f4fdb8-40e7-4a96-a520-df5c592b9673.png)
+
+
 ```
 # 数据前处理
 import pandas as pd
@@ -42,3 +46,12 @@ for i, j in enumerate(np.unique(y_set)):
                color=ListedColormap(('orange','blue'))(i),label=i)
 ```
 ![image](https://user-images.githubusercontent.com/41554601/175778336-d9ca3666-ba74-4d4a-931a-75eaa5937a05.png)
+
+### 可以画决策树
+```
+from sklearn import tree
+### 设置面板大小
+plt.figure(figsize=(10,10))
+### fontsize 设置图片大小
+tree.plot_tree(classifier, filled=True,fontsize= 7)
+```
