--- a/分类/随机森林.md
+++ b/分类/随机森林.md
@@ -1,8 +1,7 @@
 # 载入数据
 [Social_Network_Ads.csv](https://github.com/171909771/DATA-scientist/files/8984596/Social_Network_Ads.csv)
-
+### 数据前处理
 ```
-# 数据前处理
 import pandas as pd
 import numpy as np 
 import matplotlib.pyplot as plt 
@@ -15,8 +14,11 @@ from sklearn.preprocessing import StandardScaler
 sc_X = StandardScaler()
 X_train=sc_X.fit_transform(X_train)
 X_test=sc_X.transform(X_test)
-# 随机森林
-## 就是随机建筑N个树，然后用决策树判定后，少数服从多数
+```
+### 随机森林
+##### 就是随机建筑N个树，然后用决策树判定后，少数服从多数
+![image](https://user-images.githubusercontent.com/41554601/181510025-40c8d858-30c5-4481-a043-18122276018c.png)
+```
 from sklearn.ensemble import RandomForestClassifier
 ### max_features在Classifier中是总feature的平方根，在regression中是log2（总feature）
 classifier=RandomForestClassifier(n_estimators=500,criterion='entropy',random_state=0)
