--- a/分类/随机森林.md
+++ b/分类/随机森林.md
@@ -17,10 +17,10 @@ X_test=sc_X.transform(X_test)
 ```
 ### 随机森林
 ##### 就是随机建筑N个树，然后用决策树判定后，少数服从多数
+#### max_features在Classifier中是总feature的平方根，在regression中是log2（总feature）
 ![image](https://user-images.githubusercontent.com/41554601/181510025-40c8d858-30c5-4481-a043-18122276018c.png)
 ```
 from sklearn.ensemble import RandomForestClassifier
-### max_features在Classifier中是总feature的平方根，在regression中是log2（总feature）
 classifier=RandomForestClassifier(n_estimators=500,criterion='entropy',random_state=0)
 classifier.fit(X_train,y_train)
 y_pred=classifier.predict(X_test)
