--- a/分类/随机森林.md
+++ b/分类/随机森林.md
@@ -18,6 +18,7 @@ X_test=sc_X.transform(X_test)
 ### 随机森林
 ##### 就是随机建筑N个树，然后用决策树判定后，少数服从多数
 #### max_features在Classifier中是总feature的平方根，在regression中是log2（总feature）
+#### max_depth建议从=3开始尝试，看看拟合的效果再决定是否增加设定深度。
 ![image](https://user-images.githubusercontent.com/41554601/181510025-40c8d858-30c5-4481-a043-18122276018c.png)
 ```
 from sklearn.ensemble import RandomForestClassifier
