--- a/深度学习/人工神经网络.md
+++ b/深度学习/人工神经网络.md
@@ -31,7 +31,7 @@ X_train=sc_X.fit_transform(X_train)
 X_test=sc_X.transform(X_test)
 ```
 
-### 人工神经网络
+### 人工神经网络1
 ```
 import keras
 from keras.models import Sequential
@@ -53,4 +53,17 @@ y_pred=classifier.predict(X_test)
 y_pred=y_pred>0.5
 from sklearn.metrics import confusion_matrix
 cm=confusion_matrix(y_test,y_pred)
+```
+### 人工神经网络2
+![image](https://user-images.githubusercontent.com/41554601/181734671-eac7f7a3-0f3e-4227-868f-692611f13ba1.png)
+```
+from sklearn.model_selection import train_test_split
+from sklearn.datasets import load_digits
+dataset=load_digits()
+X,y=dataset.data,dataset.target==1
+X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)
+from sklearn.neural_network import MLPClassifier
+ml=MLPClassifier(hidden_layer_sizes=[100,100],activation ='relu',alpha=0.01,random_state=0,solver='lbfgs')
+ml.fit(X_train,  y_train)
+ml.score(X_test,  y_test)
 ```
